Added docker-compose details for individual deployment
Changed the version of the manager to v1.1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 ---
 version: "2.4"
 services:
-  app:
-    image: penguintech/core-ansible
-    
+  waddlebot-gateway-manager:
+    build: modules/Waddlebot-GwMgr
+    ports: 
+      - "80:5000"
+    env_file: .env
+    restart: always
+     
